+ 修复配方问题 + jei修复 + 渲染修复